# skid_steer_sliding_mode_controller

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
examples/: ros_wrapper_example.py  simulate_trajectory.py
smc_controller/: __init__.py  controller.py  utils.py
tests/: test_controller.py
